[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Media/grapple-gameplay_crop.webm" type="VideoStream" id=3]
[ext_resource path="res://new_shader.tres" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/lod = 2.0

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 3 )
autoplay = true
buffering_msec = 1000

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.462745 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -196.0
margin_right = 335.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 285.0
margin_bottom = 29.0
text = "Play"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 285.0
margin_bottom = 62.0
text = "Tutorial"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 285.0
margin_bottom = 95.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
